--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chaotic World of Wheeler</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -42,7 +45,11 @@
         .content {
             padding: 20px;
             background-color: #f4f4f4;
-            height: 400px;
+            min-height: 400px;
+        }
+
+        section {
+            padding: 40px 20px;
         }
 
         footer {
@@ -59,25 +66,37 @@
 
 <body>
 
-    <header>
+    <header id="home">
         <h1>Chaotic World of Wheeler</h1>
-        <p></p>
+        <p>Welcome to the most unpredictable place on the web.</p>
     </header>
 
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="Products">Products</a>
+        <a href="#products">Products</a>
         <a href="#contact">Contact</a>
     </nav>
 
-    <div class="content">
+    <section id="about" class="content">
         <h2>About Us</h2>
         <p>This is a section where you can add more information about your website or company. Customize it as you need!</p>
-    </div>
+    </section>
+
+    <section id="products" class="content">
+        <h2>Our Products</h2>
+        <p>Coming soon! Check back later for chaotic goodies.</p>
+    </section>
+
+    <section id="contact" class="content">
+        <h2>Contact Us</h2>
+        <p>Email: wheeler@chaosworld.com<br>Phone: (123) 456-7890</p>
+    </section>
 
     <footer>
-        <p>&copy; 2025 chaotic World of Wheeler</p>
+        <p>&copy; 2025 Chaotic World of Wheeler</p>
     </footer>
-<link rel="stylesheet" type="text/css" href="styles.css">
-    
+
+</body>
+
+</html>
