--- a/index.html
+++ b/index.html
@@ -1,101 +1,115 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaotic World of Wheeler</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chaotic World of Wheeler</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet" />
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
 
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Quicksand', sans-serif;
+      background-color: #fef6e4;
+      color: #000000;
+    }
 
-        header {
-            background-color: #0429a1;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+    header {
+      background-color: #a0c4ff;
+      color: #09206b;
+      padding: 50px 20px;
+      text-align: center;
+      border-bottom: 5px solid #ffc6c7;
+    }
 
-        nav {
-            background-color: #333;
-            overflow: hidden;
-        }
+    nav {
+      background-color: #5a9b2f;
+      display: flex;
+      justify-content: center;
+    }
 
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            padding: 14px 20px;
-            text-align: center;
-            text-decoration: none;
-        }
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 14px 24px;
+      display: inline-block;
+      transition: background 0.3s, color 0.3s;
+    }
 
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+    nav a:hover {
+      background-color: #ffc6c7;
+      color: #333;
+    }
 
-        .content {
-            padding: 20px;
-            background-color: #f4f4f4;
-            min-height: 400px;
-        }
+    section {
+      padding: 60px 20px;
+      border-bottom: 1px solid #ddd;
+    }
 
-        section {
-            padding: 40px 20px;
-        }
+    section:nth-child(even) {
+      background-color: #fff;
+    }
 
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    section:nth-child(odd) {
+      background-color: #fef6e4;
+    }
+
+    h2 {
+      color: #5a9b2f;
+      border-left: 6px solid #ffc6c7;
+      padding-left: 12px;
+    }
+
+    footer {
+      background-color: #a0c4ff;
+      color: #09206b;
+      text-align: center;
+      padding: 20px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      border-top: 5px solid #ffc6c7;
+    }
+  </style>
 </head>
 
 <body>
 
-    <header id="home">
-        <h1>Chaotic World of Wheeler</h1>
-        <p>Welcome to the most unpredictable place on the web.</p>
-    </header>
+  <header id="home">
+    <h1>THE CHAOTIC WORLD OF WHEELER</h1>
+    
+  </header>
 
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#products">Products</a>
-        <a href="#contact">Contact</a>
-    </nav>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#products">Products</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-    <section id="about" class="content">
-        <h2>About Us</h2>
-        <p>This is a section where you can add more information about your website or company. Customize it as you need!</p>
-    </section>
+  <section id="about">
+    <h2>About Us</h2>
+    <p>We’re a team of dreamers in a universe of color and creativity. Step into the chaos that feels like calm.</p>
+  </section>
 
-    <section id="products" class="content">
-        <h2>Our Products</h2>
-        <p>Coming soon! Check back later for chaotic goodies.</p>
-    </section>
+  <section id="products">
+    <h2>Our Products</h2>
+    <p>Stay tuned! Our pastel-powered products are coming soon.</p>
+  </section>
 
-    <section id="contact" class="content">
-        <h2>Contact Us</h2>
-        <p>Email: wheeler@chaosworld.com<br>Phone: (123) 456-7890</p>
-    </section>
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: wheeler@chaosworld.com<br />Phone: (123) 456-7890</p>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Chaotic World of Wheeler</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Chaotic World of Wheeler</p>
+  </footer>
 
 </body>
 
