--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home | Chaotic World of Wheeler</title>
+  <title>About | Chaotic World of Wheeler</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Chaotic World of Wheeler</h1>
-    <p>Welcome to our pastel playground of beautiful chaos.</p>
+    <h1>About Us</h1>
+    <p>The story behind the chaos.</p>
   </header>
 
   <nav>
@@ -19,19 +19,13 @@
     <a href="products.html">Products</a>
   </nav>
 
-  <main>
-    <section>
-      <h2>Home Sweet Chaos</h2>
-    </section>
-  </main>
+  <section>
+    <h2>Who We Are</h2>
+    <p>We're dreamers who build delightful confusion into design. Meet the creators behind the chaos.</p>
+  </section>
 
   <footer>
     <p>&copy; 2025 Chaotic World of Wheeler</p>
   </footer>
 </body>
 </html>
-<!-- index.html -->
-<body class="home">
-    <!-- All your content here -->
-  </body>
-  
